apps/services/plex/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: plex
  namespace: plex
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/description: Media Server
    gethomepage.dev/group: Media
    gethomepage.dev/icon: plex.png
    gethomepage.dev/name: Plex
    cert-manager.io/cluster-issuer: homelab-issuer
spec:
  rules:
    - host: plex.internal
      http:
        paths:
          - backend:
              service:
                name: plex-plex-media-server
                port:
                  number: 32400
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - plex.internal
      secretName: homelab-tls
